# kbsmash

./: .gitignore  CLAUDE.md  README.md  devlog.md  pyproject.toml  spec.md  todo.md
chat/: prompt.md
kbsmash/: __init__.py  _functions.py  _game.py  _gamepad.py  _input.py  _pynput_input.py  _screen.py  _terminal.py  _timing.py  emojis.py
kbsmash/examples/: bouncing_ball.py  gamepad_demo.py  pong.py  pong_emoji.py  snake.py  snake_emoji.py  space_invaders.py
tests/: conftest.py  test_gamepad.py  test_input.py  test_package.py  test_screen.py  test_terminal.py  test_timing.py
