[project]
name = "kbsmash"
version = "0.1.0"
description = "Terminal arcade engine for teaching kids programming"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
pynput = ["pynput>=1.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kbsmash"]
