[project]                                                                                                                                                                                                     
name = "kbsmash"                                                                                                                                                                                              
version = "0.1.0"
description = "Terminal arcade game engine for educational purposes"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "kbsmash@gsidier.com" }]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console :: Curses",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pynput>=1.7",
    "windows-curses>=2.3; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/gsidier/kbsmash"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kbsmash"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
